Added Customer Details

--- a/Dashboard/Views/Home/MonthSale.cshtml
+++ b/Dashboard/Views/Home/MonthSale.cshtml
@@ -22,6 +22,15 @@
         <th>
             @Html.DisplayNameFor(model => model.PurchaseDate)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Customer)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Place)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PaidStatus)
+        </th>
         <th></th>
     </tr>
 
@@ -36,7 +45,16 @@
         <td>
             @Html.DisplayFor(modelItem => item.PurchaseDate)
         </td>
-       
+        <td>
+            @Html.DisplayFor(modelItem => item.Customer)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Place)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PaidStatus)
+        </td>
+
     </tr>
  }
 
